--- a/MVCdemo.Front/Views/Home/Index.cshtml
+++ b/MVCdemo.Front/Views/Home/Index.cshtml
@@ -6,3 +6,14 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+<div>我的 HTML 結構...</div>
+
+@section TopCSS{
+    <link rel="stylesheet" href="~/css/xxx.css" />
+}
+
+@section EndJS{
+    <script src="~/js/xxx.js"></script>
+}
